# CPPThreadUtils

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ThreadCommsConfig.cmake  allTests.cpp  buildDeps.sh  buildFromDeps.sh
docs/: StateModels.dia
include/: AggPipePub.h  AggPipePub.hpp  AggPipePub_MessageAdaption.h  AggUpdate.h  IPostable.h  PipePublisher.h  PipePublisher.hpp  PipeSubscriber.h  PipeSubscriber.hpp  WorkerThread.h
src/: AggUpdate.cpp  WorkerThread.cpp  dummy.cpp  publisherSpeed.cpp
test/: agg.cpp  allTests.cpp  pipe.cpp  pipe_state_model.cpp  worker.cpp
